Fixes link hover/tap effect broken on mobile
And removes the # icon the blog post headers and simplifies
the the linked heading rendering

--- a/src/app/[slug]/classes.module.css
+++ b/src/app/[slug]/classes.module.css
@@ -37,15 +37,12 @@
   & h4,
   & h5,
   & h6 {
-    position: relative;
-    &:hover a {
-      opacity: 1;
-    }
     & a {
-      @apply absolute left-0 -translate-x-[100%] font-light text-gray-400! no-underline! after:content-['#'] transition-opacity duration-100 pr-[3px] md:px-2 opacity-0;
-      &:focus {
-        opacity: 1;
+      &,
+      &:visited {
+        color: var(--color-text-foreground);
       }
+      text-decoration: none;
     }
   }
 }
